# ocean

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  cli-docs.md  cli-example.md  install.ps1  install.sh  project-plan.md  skills-lock.json
.agents/skills/: brainstorming  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  subagent-driven-development  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  stale.yml
.ocean/: config.json
.specs/ocean-cache/: design.md  requirements.md  tasks.md
.specs/ocean-chunk/: design.md  requirements.md  tasks.md
.specs/ocean-fs/: design.md  requirements.md  tasks.md
.specs/ocean-graph/: design.md  requirements.md  tasks.md
.specs/ocean-index/: design.md  requirements.md  tasks.md
.specs/ocean-mcp/: design.md  requirements.md  tasks.md
.specs/ocean-parser/: design.md  requirements.md  tasks.md
.specs/ocean-production/: design.md  requirements.md  tasks.md
.specs/ocean-quality/: design.md  requirements.md  tasks.md
.specs/ocean-query/: design.md  requirements.md  tasks.md
.specs/ocean-runtime/: design.md  requirements.md  tasks.md
.specs/ocean-storage/: design.md  requirements.md  tasks.md
.specs/ocean-storage-integration/: design.md  requirements.md  tasks.md
.specs/ocean-vector/: design.md  requirements.md  tasks.md
docs/: api.md  cli.md
src/: cli.rs  lib.rs  mcp.rs  tests.rs
src/ocean_api/: docs.rs  embedding.rs  fs.rs  graph.rs  indexing.rs  mod.rs  querying.rs  types.rs
src/ocean_cache/: cache_manager.rs  config.rs  embedding_cache.rs  embedding_cache_test.rs  graph_cache.rs  graph_cache_test.rs  lru.rs  lru_test.rs  mod.rs  query_cache.rs  query_cache_test.rs
src/ocean_chunk/: buffer.rs  buffer_test.rs  chunker.rs  chunker_test.rs  heading.rs  heading_test.rs  mod.rs  split.rs  split_test.rs  types.rs
src/ocean_cli/: args.rs  config.rs  display.rs  events.rs  events_test.rs  init.rs  init_test.rs  metrics.rs  metrics_test.rs  mod.rs  ocean_cli.rs  run.rs  runtime.rs  runtime_test.rs  sandbox.rs  sandbox_test.rs  walk.rs
src/ocean_fs/: filter.rs  filter_test.rs  foundation.rs  hasher.rs  hasher_test.rs  mod.rs  normalizer.rs  normalizer_test.rs  path_entities.rs  path_resolver.rs  path_resolver_test.rs  scanner.rs  scanner_test.rs  types.rs  watcher.rs  watcher_test.rs
tests/: fs_integration.rs  parser_integration.rs  parser_real_files.rs
(+111 files in other folders)
