[package]
name = "ocean"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
rayon = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v7"] }
notify = "7"
mime_guess = "2"
tempfile = "3"
crossbeam-channel = "0.5"
glob = "0.3"
sea-orm = { version = "1", features = ["sqlx-sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
quick-xml = "0.31"
zip = "2"
calamine = "0.24"
lopdf = "0.32"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "cli"
path = "src/cli.rs"

[dev-dependencies]
proptest = "1"
